# odds

./: .env.example  .gitignore  .mcp.json  BACKTESTING_GUIDE.md  CLAUDE.md  DEBUGGING_SCHEDULER.md  IMPLEMENTATION_PLAN.md  README.md  TODO.md  alembic.ini  deploy.sh  docker-compose.yml  odds-scheduler.service  pyproject.toml  requirements.txt  setup.py  update_imports.py
.github/workflows/: README.md  ci-cd.yml  daily-validation.yml  deploy-dev.yml  deploy-prod.yml  live-api.yml  schedule-health-check.yml  test.yml
alerts/: base.py
analytics/: backtesting.py  feature_extraction.py  ml_strategy_example.py  strategies.py
analytics/backtesting/: __init__.py  betting.py  config.py  models.py  services.py
analytics/betting/: __init__.py  observations.py  problems.py  strategies.py
analytics/core/: __init__.py  features.py  models.py  observations.py  problems.py
analytics/features/: __init__.py  betting_features.py  sequential.py  tabular.py  validators.py
analytics/models/: __init__.py  lstm_model.py  xgboost_model.py
analytics/strategies/: __init__.py  ml_betting_strategy.py  rule_based.py
cli/: main.py
cli/commands/: backfill.py  backtest.py  copy_from_prod.py  fetch.py  scheduler.py  status.py  validate.py
core/: api_models.py  backfill_executor.py  config.py  data_fetcher.py  database.py  game_selector.py  gap_analyzer.py  ingestion.py  models.py  tier_utils.py  time.py
core/scheduling/: health_check.py  intelligence.py
data/espn_fixtures/: fixtures_2015-16.csv  fixtures_2016-17.csv  fixtures_2017-18.csv  fixtures_2018-19.csv  fixtures_2019-20.csv  fixtures_2020-21.csv  fixtures_2021-22.csv  fixtures_2022-23.csv  fixtures_2023-24.csv  fixtures_2024-25.csv  fixtures_2025-26.csv
deployment/aws/: Dockerfile.lambda  Dockerfile.scraper  build_and_push.sh  build_and_push_scraper.sh  build_lambda.sh  lambda_function.py
docs/: AGENT_DATA_SOURCES.md  ARCHITECTURE.md  BACKTESTING_GUIDE.md  BETTING_AGENT.md  BOOKMAKER_LINE_RELEASE.md  CLI.md  CODE_REVIEW.md  DATABASE.md  DATA_MODELS.md  DEBUGGING_SCHEDULER.md  DEPLOYMENT.md  DEVELOPMENT.md  EPL_FEATURES.md  EVALUATION.md  INJURIES.md  MLB_IMPLEMENTATION.md  MODELING.md  POLYMARKET.md  REPORTING.md
experiments/configs/: lstm_line_movement_tuning.yaml  lstm_line_movement_tuning_best.yaml  lstm_pinnacle_tuning.yaml  xgboost_bet365_baseline.yaml  xgboost_bet365_baseline_tuning.yaml  xgboost_bet365_injuries.yaml  xgboost_bet365_sliding_tuning.yaml  xgboost_bet365_tuning.yaml  xgboost_cross_source_v1.yaml  xgboost_epl_baseline_tuning.yaml  xgboost_epl_betfair_sharp.yaml  xgboost_epl_combined_all_tuning.yaml  xgboost_epl_combined_bet365sharp_tuning.yaml  xgboost_epl_combined_bet365sharp_tuning_best.yaml  xgboost_epl_combined_match_stats_tuning.yaml  xgboost_epl_combined_schedule_tuning.yaml  xgboost_epl_combined_standings_schedule_tuning.yaml  xgboost_epl_combined_standings_tuning.yaml  xgboost_epl_combined_tuning.yaml  xgboost_epl_combined_tuning_best.yaml  xgboost_epl_fpl_availability_tuning.yaml  xgboost_epl_hybrid_sharp.yaml  xgboost_epl_lineup.yaml  xgboost_epl_ou_baseline_tuning.yaml  xgboost_epl_ou_baseline_tuning_best.yaml  xgboost_epl_pinnacle_sharp_2024.yaml  xgboost_epl_production_all_features.yaml  xgboost_epl_production_expanding_150.yaml  xgboost_epl_production_expanding_50.yaml  xgboost_epl_production_tabular_match_stats.yaml  xgboost_epl_production_tabular_only.yaml  xgboost_epl_production_tabular_standings.yaml  xgboost_feature_selection_tuning.yaml  xgboost_feature_selection_tuning_best.yaml  xgboost_pinnacle_tuning.yaml  xgboost_pinnacle_tuning_best.yaml  xgboost_tuning_without_feature_selection.yaml
experiments/results/: espn_lineup_timing_check.md
experiments/scripts/: betfair_historical_analysis.py  betfair_nba_explore.py  cv_protocol_grid.py  exp1_feature_correlations.py  exp2_feature_group_isolation.py  exp4_hours_to_game.py  exp6_learning_curve.py  exp6b_injury_closing_tier.py  exp7_backtest_simulation.py  exp7b_line_shopping.py  fold_diagnostics.py  hybrid_sharp_validation.py  lineup_signal_check.py  polymarket_mlb_discover.py  polymarket_mlb_orderbooks.py  (+5 more)
issues/: ISSUE_SCHEMA.md
jobs/: fetch_odds.py  fetch_scores.py  update_status.py
migrations/: env.py
notebooks/: FEATURE_EXTRACTOR_GUIDE.md  UPDATE_NOTES.md  lstm_training.ipynb  ml_strategy_training.ipynb  odds_analysis.ipynb
scheduler/: jobs.py  main.py
scripts/: activate-schedules.sh  check_game_tier_coverage.py  check_games_in_database.py  check_tier_distribution.py  copy_from_production.py  ingest_espn_fixtures.py  ingest_espn_lineups.py  ingest_fbref_player_stats.py  ingest_football_data_uk.py  ingest_fpl_availability.py  ingest_oddsportal.py  lambda_usage.py  scrape_oddsportal.py  team_names.py  verify-schedules.sh
storage/: readers.py  tier_validator.py  validators.py  writers.py
tests/: conftest.py  test_helpers.py
(+248 files in other folders)
