[workspace]
# UV Workspace configuration
members = [
    "packages/odds-core",
    "packages/odds-lambda",
    "packages/odds-analytics",
    "packages/odds-cli",
]

[project]
name = "betting-odds-pipeline"
version = "0.1.0"
description = "NBA betting odds data collection and analysis system"
authors = [{name = "Andrew"}]
requires-python = ">=3.11"

# Workspace root - no direct dependencies
# Install individual packages as needed:
# - uv pip install -e packages/odds-core
# - uv pip install -e packages/odds-lambda
# - uv pip install -e packages/odds-analytics
# - uv pip install -e packages/odds-cli

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
