[tool.uv.workspace]
members = [
    "packages/odds-core",
    "packages/odds-lambda",
    "packages/odds-analytics",
    "packages/odds-cli",
]

[project]
name = "betting-odds-pipeline"
version = "0.1.0"
description = "NBA betting odds data collection and analysis system"
authors = [{name = "Andrew"}]
requires-python = ">=3.11"

# Install all workspace packages by default
# (dependencies remain in their respective subpackages)
dependencies = [
    "odds-core",
    "odds-lambda",
    "odds-analytics",
    "odds-cli",
]

[tool.uv.sources]
odds-core = { workspace = true }
odds-lambda = { workspace = true }
odds-analytics = { workspace = true }
odds-cli = { workspace = true }

[dependency-groups]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "freezegun>=1.5.5",
    # Code quality
    "ruff>=0.14.0",
    "pre-commit>=3.5.0",
    # Data analysis & ML (for development)
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "seaborn>=0.13.2",
    "xgboost>=2.0.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "py-pglite[asyncpg,sqlalchemy]>=0.5.3",
    "psycopg[binary]>=3.2.12",
    "pytest-env>=1.2.0",
    "statsmodels>=0.14.6",
]

# Virtual workspace root - no build system needed
# Workspace members are built independently

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
env = [
    "ODDS_API_KEY=",
]
